--- a/main.css
+++ b/main.css
@@ -94,6 +94,12 @@ nav {
 }
 
 .program-btn {
+    padding: .8em 1em;
+    background-color: var(--secondary-color);
+    border-radius: 8px;
+    font-size: .8em;
+    cursor: pointer;
+    font-weight: 700;
     color: var(--tettiary-color) !important;
 }
 
